Fix pagination, alignement vertical graphiques, tableau plus large et scroll dans la modale

--- a/files/style.css
+++ b/files/style.css
@@ -66,21 +66,15 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
+
     padding: 1rem 2rem;
     background-color: var(--white);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    flex-wrap: wrap;
 }
 
-.flex_column{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    padding: 1rem 2rem;
-    background-color: var(--white);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+
 
 .flex_row section {
     display: flex;
@@ -277,7 +271,8 @@ fieldset {
 
 #tableau {
     
-    width: 50%;
+    width: 60%;
+    
 }
 
 #recherche {
@@ -376,10 +371,15 @@ fieldset {
 
 dialog:is([open]) {
     max-width: 50%;
-    overflow: hidden;
+    overflow: scroll;
     display: flex;
     flex-direction: column;
     border: none;
+}
+
+dialog table{
+    table-layout: fixed;
+    overflow: scroll;
 }
 
 dialog::backdrop {
